# dbrx_llm

./: .gitignore  Makefile  README.md  pyproject.toml  upload_package.py
examples/dbrx/: 00-create_package.py  01-simple_hf_train.py  02-create_mosaic_data_streaming.py  03-composer_train.py  04-resume_training.py  05-save_torch_model.py
examples/py/: 01-simple_hf_train.py
examples/ray/: 01-ray_train.py  config.py
src/dbrx_llm/: dataset.py  eval.py  train.py  utils.py
src/dbrx_llm/models/: __init__.py  composer.py  pyfunc.py  pytorch.py
